logs/hitchs3.log
Listing '.'...
Listing './bin'...
Compiling './bin/bottle.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/IPython'...
Listing './lib/python3.5/site-packages/IPython/core'...
Listing './lib/python3.5/site-packages/IPython/core/magics'...
Listing './lib/python3.5/site-packages/IPython/core/profile'...
Listing './lib/python3.5/site-packages/IPython/core/tests'...
Listing './lib/python3.5/site-packages/IPython/core/tests/daft_extension'...
Listing './lib/python3.5/site-packages/IPython/extensions'...
Listing './lib/python3.5/site-packages/IPython/extensions/tests'...
Listing './lib/python3.5/site-packages/IPython/external'...
Listing './lib/python3.5/site-packages/IPython/external/decorators'...
Listing './lib/python3.5/site-packages/IPython/kernel'...
Listing './lib/python3.5/site-packages/IPython/lib'...
Listing './lib/python3.5/site-packages/IPython/lib/tests'...
Listing './lib/python3.5/site-packages/IPython/sphinxext'...
Listing './lib/python3.5/site-packages/IPython/terminal'...
Listing './lib/python3.5/site-packages/IPython/terminal/tests'...
Listing './lib/python3.5/site-packages/IPython/testing'...
Listing './lib/python3.5/site-packages/IPython/testing/plugin'...
Listing './lib/python3.5/site-packages/IPython/testing/tests'...
Listing './lib/python3.5/site-packages/IPython/utils'...
Listing './lib/python3.5/site-packages/IPython/utils/tests'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/bottle-0.12.13.egg-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/colorama'...
Listing './lib/python3.5/site-packages/colorama-0.3.9.dist-info'...
Listing './lib/python3.5/site-packages/commandlib'...
Listing './lib/python3.5/site-packages/commandlib-0.3.0.egg-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/decorator-4.1.2.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/faketime'...
Listing './lib/python3.5/site-packages/faketime-0.9.6.8.egg-info'...
Listing './lib/python3.5/site-packages/hitchs3'...
Listing './lib/python3.5/site-packages/hitchs3-0.1.egg-info'...
Listing './lib/python3.5/site-packages/hitchserve'...
Listing './lib/python3.5/site-packages/hitchserve-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/hitchtest'...
Listing './lib/python3.5/site-packages/hitchtest/environment'...
Listing './lib/python3.5/site-packages/hitchtest/templates'...
Listing './lib/python3.5/site-packages/hitchtest-0.9.12.egg-info'...
Listing './lib/python3.5/site-packages/humanize'...
Listing './lib/python3.5/site-packages/humanize/locale'...
Listing './lib/python3.5/site-packages/humanize/locale/fr_FR'...
Listing './lib/python3.5/site-packages/humanize/locale/fr_FR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize/locale/ko_KR'...
Listing './lib/python3.5/site-packages/humanize/locale/ko_KR/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize/locale/ru_RU'...
Listing './lib/python3.5/site-packages/humanize/locale/ru_RU/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/humanize-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/ipython-4.2.1.dist-info'...
Listing './lib/python3.5/site-packages/ipython_genutils'...
Listing './lib/python3.5/site-packages/ipython_genutils/testing'...
Listing './lib/python3.5/site-packages/ipython_genutils/tests'...
Listing './lib/python3.5/site-packages/ipython_genutils-0.2.0.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/path.py-10.5.dist-info'...
Listing './lib/python3.5/site-packages/patool-1.12.dist-info'...
Listing './lib/python3.5/site-packages/patoolib'...
Listing './lib/python3.5/site-packages/patoolib/programs'...
Listing './lib/python3.5/site-packages/pexpect'...
Listing './lib/python3.5/site-packages/pexpect-4.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pickleshare-0.7.4.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/psutil'...
Listing './lib/python3.5/site-packages/psutil/tests'...
Listing './lib/python3.5/site-packages/psutil-5.4.3.egg-info'...
Listing './lib/python3.5/site-packages/ptyprocess'...
Listing './lib/python3.5/site-packages/ptyprocess-0.5.2.dist-info'...
Listing './lib/python3.5/site-packages/pykwalify'...
Listing './lib/python3.5/site-packages/pykwalify-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pyuv'...
Listing './lib/python3.5/site-packages/pyuv-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplegeneric-0.8.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tblib'...
Listing './lib/python3.5/site-packages/tblib-1.3.2.dist-info'...
Listing './lib/python3.5/site-packages/traitlets'...
Listing './lib/python3.5/site-packages/traitlets/config'...
Listing './lib/python3.5/site-packages/traitlets/config/tests'...
Listing './lib/python3.5/site-packages/traitlets/tests'...
Listing './lib/python3.5/site-packages/traitlets/utils'...
Listing './lib/python3.5/site-packages/traitlets/utils/tests'...
Listing './lib/python3.5/site-packages/traitlets-4.3.2.dist-info'...
Listing './lib/python3.5/site-packages/unixpackage'...
Listing './lib/python3.5/site-packages/unixpackage/click'...
Listing './lib/python3.5/site-packages/unixpackage-0.4.7.egg-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/man'...
Listing './share/man/man1'...
Listing './share/python-wheels'...
